# glyph

./: .gitignore  README.md  pyproject.toml
examples/: 01_query_helper.py  02_query_streamed.py  03_query_then_receive_response.py  04_query_and_receive_response.py  05_receive_messages_multiple_turns.py  06_sessions.py  07_tools_and_permissions.py  08_openai_reasoning.py  09_resolve_backend.py  10_claude_async_prompt_iterable.py  16_workflow_streaming.py  README.md  example_agnos.py  example_claude.py  example_openai.py
examples/19_workflow_markdown_bash/: main.py
examples/20_workflow_markdown_llm_first/: main.py  workflow.md
examples/agnos/: query_and_receive.py  simple_query.py  stream.py
src/agnos/: __init__.py  client.py  messages.py  options.py  pricing.py  query.py  types.py
src/agnos/agents/: base.py
src/agnos/backends/: __init__.py  base.py  claude_backend.py  openai_backend.py
src/agnos/backends/claude/: __init__.py  backend.py
src/agnos/backends/openai/: __init__.py  backend.py  pricing.py
src/glyph/: cli.py
src/glyph/workflows/: __init__.py  decorators.py  markdown.py
src/glyph/workflows/markdown/: __init__.py  models.py  parser.py  step_builder.py
tests/: test_workflow_markdown.py
tests/sdk/: test_query.py  test_tools.py
tests/sdk/client/: test_query_streamed.py
tests/workflows/: test_cli.py  test_workflow_markdown.py  test_workflow_streaming.py
