[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "agnos"
version = "1.0.0"
description = "Vendor agnostic agent sdk"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "claude-agent-sdk",
    "openai-agents"
]

[tool.setuptools.packages.find]
where = ["src"]
